manifests/installation/charts/onex/kustomize/onex-controller-manager/base/deployment_patch.yaml
# Copyright 2020 Lingfei Kong <colin404@foxmail.com>. All rights reserved.
# Use of this source code is governed by a MIT style
# license that can be found in the LICENSE file.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: onex-controller-manager # 资源名称
spec:
  template:
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - onex-controller-manager
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - args:
        - --kubeconfig=/opt/onex/conf/config
        - --config=/opt/onex/conf/onex-controller-manager.yaml
        - --v=10
        image: ccr.ccs.tencentyun.com/onexstack/onex-controller-manager-amd64:v1.0.0
        name: onex-controller-manager
        ports:
        - containerPort: 10249
          name: metrics
          protocol: TCP
        - containerPort: 20250
          name: health
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz
            port: 20250
        readinessProbe:
          httpGet:
            path: /readyz
            port: 20250
        startupProbe:
          httpGet:
            path: /healthz
            port: 20250
        volumeMounts:
        - mountPath: /opt/onex/conf/onex-controller-manager.yaml
          name: onex-controller-manager
          subPath: onex-controller-manager.yaml
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: onex-controller-manager.yaml
            path: onex-controller-manager.yaml
          name: onex-controller-manager
        name: onex-controller-manager
